tests/ui/feature-gates/feature-gate-rustdoc-texmath.rs
#![doc(math_syntax)]
//~^ ERROR unstable

//! $\sqrt{2}$

fn main() {}
